<resources>
    <string name="app_name">NeverLonely</string>
    <string name="never_lonely">Never Lonely</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_login">Email Login</string>
    <string name="events_around_you">Events around you</string>
    <string name="join">Join</string>
    <string name="date_picker_title">Date of event:</string>
    <string name="time_picker_title">Time of event:</string>
    <string name="location">Location</string>
    <string name="authentication_success">Authentication successful</string>
    <string name="authentification_failed">Authentication failed.</string>
    <string name="enter_valid_email">Please enter a valid email address</string>
    <string name="enter_your_name">Please enter your name</string>
    <string name="password_at_least_six_char">Please create a password containing at least 6 characters</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="date_is">date is</string>
    <string name="event_success_added">The event was successfully added!</string>
    <string name="enter_more_event_details">Enter more details about the event</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="x">X</string>
    <string name="create_event">Create event</string>
    <string name="save">Save</string>
    <string name="event_title">Event Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="zip">Zip</string>
    <string name="max_number_of_attendees">Max number of attendees</string>
    <string name="log_me_out">Log me out</string>
    <string name="weather">Weather:</string>
    <string name="current_max_of_attendees">Current/max # of attendees</string>
    <string name="event_date">Event Date</string>
    <string name="my_events">My Events</string>
    <string name="background_image">Background Image</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="confirm_participation_text">Click OK to confirm your participation in the event</string>
    <string name="browse">Browse</string>
    <string name="my_profile">My Profile</string>
</resources>
