<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.epicodus.neverlonely.ui.StartActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/matthewgerrard"
        android:contentDescription="@string/background_image"/>

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/never_lonely"
        android:textSize="45sp"/>

    <LinearLayout
        android:id="@+id/sign_in_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/email_login_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/email_login"
            android:textAllCaps="false"
            android:background="@drawable/button_shape"/>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="120dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:background="@drawable/button_shape"/>
    </LinearLayout>

</RelativeLayout>
